<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:id="@+id/menuHome"
            android:title="@string/home"
            android:icon="@drawable/ic_home_black_24dp"/>
        <item android:id="@+id/menuOrder"
            android:title="@string/order"
            android:icon="@drawable/ic_local_dining"/>
        <item
            android:id="@+id/menuAdmin"
            android:title="@string/admin"
            android:icon="@drawable/icon_admin"/>
        <item
            android:id="@+id/menuSignout"
            android:title="@string/logout"
            android:icon="@drawable/icon_logout"
            />
    </group>

</menu>
