<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.w3.snacktime.LoginActivity">

    <!-- TODO: Update login fragment layout -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/hello_login_fragment"
        android:textAppearance="?android:textAppearanceLarge"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/user_name"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="135dp"
        android:hint="@string/user_name" />

    <EditText
        android:id="@+id/user_pass"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/signin_btn"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@drawable/user_button"
        android:text="@string/sign_in"
        android:elevation="5dp"/>

    <TextView
        android:id="@+id/register_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:text="@string/new_user_register_now" />


</LinearLayout>
